# polybot

./: .gitignore  ALGORITHM.md  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  Dockerfile  PROJECT_WALKTHROUGH.md  lesstidy.md  old1.md  paper_trade.md  predictions.csv
src/: api.rs  chainlink.rs  config.rs  discovery.rs  executor.rs  log_buffer.rs  main.rs  models.rs  orderbook_ws.rs  paper_trade.rs  rtds.rs  strategy.rs  web.rs
