[package]
name = "polymarket-arbitrage-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
url = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
rust_decimal = "1.33"
hex = "0.4"
polymarket-client-sdk = { version = "0.4.2", features = ["clob", "ws"] }
alloy = { version = "1.3", features = ["full"] }
alloy-contract = "1.3"
alloy-sol-types = "1.5"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.9"
axum = "0.8"
async-stream = "0.3"
rustls = { version = "0.23", features = ["ring"] }
